updated WHOIS and DNS scanner handlers
