# docs/swagger/swagger.json
@@ -3523,7 +3523,7 @@
                 5
             ],
             "x-enum-varnames": [
-                "JOB_TYPE_OSS",
+                "JOB_TYPE_OSINT",
                 "JOB_TYPE_NMAP",
                 "JOB_TYPE_WHOIS",
                 "JOB_TYPE_DNS",
@@ -3637,7 +3637,8 @@
                 3,
                 4,
                 5,
-                6
+                6,
+                7
             ],
             "x-enum-varnames": [
                 "OSS_PROVIDER_VIRUS_TOTAL",
@@ -3646,7 +3647,8 @@
                 "OSS_PROVIDER_SHODAN",
                 "OSS_PROVIDER_IP_WHO_IS",
                 "OSS_PROVIDER_CRIMINAL_IP",
-                "OSS_PROVIDER_IP_INFO"
+                "OSS_PROVIDER_IP_INFO",
+                "OSS_PROVIDER_IP_API"
             ]
         },
         "jobEntities.Target": {
@@ -4064,7 +4066,20 @@
                 "SemanticScore": {
                     "type": "number"
                 },
+                "TXTRecords": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/networkEntities.domainRecordValue"
+                    }
+                },
                 "Tag": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/networkEntities.scanStringValue"
+                    }
+                },
+                "WHOIS": {
+                    "description": "whois data",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/networkEntities.scanStringValue"
@@ -4482,10 +4497,10 @@
         "routing.jobPayload": {
             "type": "object",
             "properties": {
-                "job": {
+                "Job": {
                     "$ref": "#/definitions/jobEntities.Job"
                 },
-                "summary": {
+                "Summary": {
                     "$ref": "#/definitions/jobEntities.JobSummary"
                 }
             }
